# boardcore

./: .clang-format  .clangd  .color_coded  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .sbscache  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  Makefile  Makefile.template  README.md  sbs  sbs.cmake  sbs.conf  sbs_colored
cmake/: FindEIGEN.cmake  FindFMT.cmake  FindMXGUI.cmake  FindTSCPP.cmake  boardcore-host.cmake  boardcore.cmake  boards.cmake  dependencies.cmake  sbs.cmake  version.cmake  version.cpp.in  version.h.in
config/: Makefile.inc  miosix_settings.h  oldmake
data/: fault_list.csv
data/gdb/: stm32f4-stlinv2.cfg  stm32f7-stlinv2.cfg
doc/: Doxyfile
ide/vscode/: c_cpp_properties.json  launch.json
libs/cereal/: cereal.hpp
libs/fmt/: .gitignore  CMakeLists.txt  Makefile  README_SKYWARD.md
libs/simple-template-matrix/: Makefile  README.md  matrix.h  testsuite.cpp
logdecoder/: Makefile  logdecoder.cpp
old_examples/entrypoints/: example-fsm.cpp
old_examples/entrypoints/anakin/: anakin-test-suite.cpp  canbus-test.cpp  dma-lowlevel-test.cpp  test-scheduler.cpp  test_ethernet.cpp
old_examples/shared/: Common.h
old_examples/shared/diagnostic/: FaultCounter.h
old_examples/shared/drivers/: Leds.cpp  Leds.h
old_examples/shared/math/: Matrix.h
old_examples/shared/sensors/: FXAS21002.h  LM75B.h  LPS331AP.h  MAX21105.h  MAX31856.h  MPL3115.h  Si7021.h  iNemo.h
old_examples/tests/catch/: example-test-fsm.cpp  example-test-fsm.h  test-xbee.cpp
old_examples/tests/drivers/: test-ad7994-bare.cpp  test-ad7994.cpp  test-i2c-mpu9255.cpp  test-imu-adis.cpp  test-lsm.cpp  test-spi2.cpp  test-tempSensor.cpp  test-unit-LM75B.cpp
scripts/: anakin.sh  autocomplete.py  copyrightchecker.py  cppcheck_suppressions_list.txt  gen_fault_headers.py  linter.py  linter.sh  new-flash.sh  sbs_autocomplete  sbs_implementation  start_openocd.sh
scripts/eventgen/: EventFunctions.cpp.template  EventStrings.cpp.template  Events.h.template  README.md  Topics.h.template  eventgen.py
scripts/generators/: README.md  eventgen.py  fsmgen.py  genutils.py
scripts/generators/templates/: EventStrings.cpp.template  Events.h.template  FSMController.cpp.template  FSMController.h.template  FSMData.h.template  Topics.h.template  state_function_definition.template  test.cpp.template
scripts/homeone/event_header_generator/: EventFunctions.cpp  EventFunctions.cpp.template  Events.h  Events.h.template  Topics.h  Topics.h.template  credentials.json  event_generator.py
scripts/homeone/mavlink_client/: Makefile  demo_rx.c  mavlink_demo_rx.c  plot.py
scripts/homeone_client/: Makefile  demo_tx.c  doc.txt  gamma_benchmark.txt  mavlink_demo_rx.c  mavlink_demo_tx.c
scripts/logdecoder/: Makefile  logdecoder.cpp
scripts/logdecoder/log07/: log07_Boardcore_LogAngles.csv  log07_Boardcore_VN300Data.csv
scripts/logdecoder/xbee/: .gitignore  LogTypes.h  logdecoder.cpp
scripts/mavlink_client/: Makefile  README.md  continuous_tx.c  mavlink_demo_rx.c  mavlink_demo_tx.c  plot.py  rs232.c  rs232.h
scripts/old/anakin_client_curses/: Makefile  client.c
scripts/old/excel_eventgen/: EventFunctions.cpp.template  README.md  Topics.h.template  event_generator.py
scripts/openocd/: openocd-flash.sh  start_openocd.sh
scripts/scxml2plant/: scxml2plant.sh
scripts/scxml2plant/xalan/: LICENSE.txt  NOTICE.txt  readme.html
scripts/scxml2plant/xslt/: scxml2plantuml.xslt  scxml2plantuml_finaldot.xslt
src/: main.cpp
src/bsps/stm32f205rc_skyward_ciuti/: board_options.cmake  board_settings.h
src/bsps/stm32f429zi_nokia/: board_options.cmake  board_settings.h
src/bsps/stm32f429zi_skyward_death_stack_v1/: board_options.cmake
src/bsps/stm32f429zi_skyward_death_stack_v2/: board_options.cmake  board_settings.h
src/bsps/stm32f429zi_skyward_death_stack_v3/: board_settings.h
src/bsps/stm32f429zi_skyward_pyxis_auxiliary/: board_options.cmake  board_settings.h
src/entrypoints/: NASStateWrapper.h  anakin-accel.cpp  anakin-altimeter-test.cpp  anakin-canbus-test.cpp  anakin-demo-board.cpp  anakin-test-canbus.cpp  anakin-test-dma.cpp  anakin-test-suite.cpp  asm330lhh_test.cpp  bmx160-calibration-entry.cpp  canbus-test.cpp  compute-unit-v2-testsuite.cpp  config-dsgamma.cpp  dma-lowlevel-test.cpp  dsgamma-config.cpp  dsgamma-test.cpp  f769-discovery-display.cpp  fft-benchmark.cpp  groundstation-nas-extractor.cpp  homeone-critical.cpp  imu-calibration.cpp  imu-sampler.cpp  kernel-testsuite.cpp  mutex-benchmark.cpp  nosecone-board.cpp  r2a-cutter.cpp  runcam-settings.cpp  sdcard-benchmark.cpp  sensortile-entry.cpp  sensortile-sensor.cpp  sx1278-mav-raw.cpp  sx1278-serial.cpp  test-busfault.cpp  test-byteSyncedBuf.cpp  test-canadapter.cpp  test-caninterfaces.cpp  test-dsgamma-serial.cpp  test-dsgamma.cpp  test-fmm.cpp  test-homeone.cpp  (+22 more)
src/sensors/: FXAS21002.h  MAX21105.h  MPU9250.h  MS580301BA07.h  Sensor.h  iNEMO.h
src/shared/: ActiveObject.h  BusTemplate.h  Common.h  Constants.h  Debug.cpp  Debug.h  InterruptManager.cpp  Leds.cpp  Leds.h  PinObserver.h  Singleton.h  TimestampTimer.cpp  TimestampTimer.h  data.h  debug.h  state_machine_test_helper.h
src/shared/algorithms/ADA/ADA_Algorithm0_ert_rtw/: ADA_Algorithm0.cpp  ADA_Algorithm0.h  ADA_Algorithm0_data.cpp  ADA_Algorithm0_private.h  ADA_Algorithm0_types.h  CMakeLists.txt  buildInfo.mat  ert_main.cpp
src/tests/: catch.hpp  nosecone-fsm-test.cpp  state_machine_test_helper.h  test-MBLoadCell.cpp  test-canadapter.cpp  test-canbus.cpp  test-caninterfaces.cpp  test-cutter.cpp  test-eventinjector.cpp  test-events.cpp  test-hsm.cpp  test-hwtimer-chain.cpp  test-ignition-board.cpp  test-ignition-ctrl.cpp  test-imu-adis.cpp  test-imus.cpp  test-interrupt.cpp  test-kalman-benchmark.cpp  test-kalman-data.h  test-kalman.cpp  test-mavlink.cpp  test-max485.cpp  test-nosecone-board.cpp  test-pinobserver.cpp  test-pwm.cpp  test-rls.cpp  test-rtc.cpp  test-sensormanager.cpp  test-serial.cpp  test-taskscheduler.cpp  test-timestamp-timer.cpp  test-tmtc.cpp  test-trace-logger.cpp  test-usart.cpp
version/: version.cpp.in  version.h
(+1918 files in other folders)
